--- a/index.html
+++ b/index.html
@@ -5,47 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#87CEEB"> <title>Llama Time!</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="icons/llama-icon-192.png"> <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Llama Time">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <style>
-        /* Basic Reset */
+        /* Styles remain the same as v29b */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body { height: 100%; overflow: hidden; }
         body { display: flex; flex-direction: column; align-items: center; min-height: 100vh; background-color: #f0f0f0; font-family: 'Press Start 2P', cursive; color: #333; padding: 5px; transition: background-color 0.5s ease; }
         h1 { margin-bottom: 5px; color: #4a4a4a; font-size: 1.4em; text-align: center; flex-shrink: 0; transition: color 0.5s ease; }
-
-        /* Game Container */
         #game-container { position: relative; width: 100%; max-width: 800px; aspect-ratio: 2 / 1; height: auto; border: 5px solid #4a4a4a; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.2); margin-bottom: 5px; flex-shrink: 0; cursor: pointer; background-color: #87CEEB; transition: background-color 0.5s ease; }
         canvas { display: block; width: 100%; height: 100%; background-color: transparent; image-rendering: pixelated; image-rendering: -moz-crisp-edges; image-rendering: crisp-edges; }
-
-        /* Score and Info Display */
         #info-display { display: flex; justify-content: space-between; flex-wrap: wrap; gap: 4px; width: 100%; max-width: 800px; font-size: 0.7em; margin-bottom: 5px; padding: 0 5px; flex-shrink: 0; }
         #info-display span { background-color: #fff; color: #333; border: 2px solid #4a4a4a; padding: 4px 8px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-align: center; flex-grow: 1; transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease; }
-
-        /* Mission Display */
         #mission-display { display: block; width: 100%; max-width: 800px; background-color: #fff; color: #555; padding: 5px 8px; border-radius: 8px; border: 2px solid #4a4a4a; box-shadow: 0 2px 4px rgba(0,0,0,0.1); text-align: center; font-size: 0.6em; margin-bottom: 5px; flex-shrink: 0; min-height: 25px; transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease; }
         #mission-display strong { color: #333; transition: color 0.5s ease; }
-
-        /* Buttons */
         #controls { display: flex; justify-content: center; align-items: center; gap: 8px; margin-bottom: 5px; flex-wrap: wrap; flex-shrink: 0; }
         button { font-family: 'Press Start 2P', cursive; padding: 8px 12px; font-size: 0.7em; cursor: pointer; border-radius: 8px; border: 2px solid #4a4a4a; background: linear-gradient(145deg, #ffffff, #e6e6e6); box-shadow: 3px 3px 6px #c7c7c7, -3px -3px 6px #ffffff; transition: all 0.1s ease-in-out; color: #333; }
         button:active, button:focus { outline: none; box-shadow: inset 3px 3px 6px #c7c7c7, inset -3px -3px 6px #ffffff; transform: translateY(1px); }
         button:disabled { opacity: 0.6; cursor: not-allowed; background: #eee; box-shadow: none; }
         #install-button { display: none; background: linear-gradient(145deg, #a0e0a0, #70c070); border-color: #4a8a4a; box-shadow: 3px 3px 6px #8abc8a, -3px -3px 6px #c8f0c8; margin-left: 15px; }
         #install-button:active, #install-button:focus { box-shadow: inset 3px 3px 6px #8abc8a, inset -3px -3px 6px #c8f0c8; }
-
-        /* Game Over & Start Screen */
         #message-box { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(255, 255, 255, 0.95); color: #333; padding: 15px; border-radius: 15px; text-align: center; border: 3px solid #4a4a4a; box-shadow: 0 5px 15px rgba(0,0,0,0.2); z-index: 10; font-size: 0.9em; display: none; width: 80%; max-width: 350px; transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease; }
         #message-box h2 { margin-bottom: 8px; font-size: 1.2em; }
         #message-box p { margin-bottom: 12px; }
-
         #mission-complete-popup { position: absolute; bottom: 50px; left: 50%; transform: translateX(-50%); background-color: rgba(76, 175, 80, 0.9); color: white; padding: 8px 15px; border-radius: 10px; font-size: 0.7em; z-index: 30; display: none; opacity: 0; transition: opacity 0.5s ease-out; }
-
-        /* Store Interface */
         #store-interface { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); display: none; flex-direction: column; align-items: center; overflow-y: auto; z-index: 20; color: white; padding: 15px 10px; text-align: center; }
         #store-interface h2 { margin-top: 10px; margin-bottom: 10px; font-size: 1.2em; flex-shrink: 0; }
         #store-interface > p { margin-bottom: 10px; font-size: 0.8em; flex-shrink: 0; }
@@ -54,15 +40,12 @@
         .store-item p { margin-bottom: 6px; font-size: 0.7em; }
         .store-item button { font-size: 0.6em; padding: 5px 10px; margin-top: 4px; }
         #close-store { margin-top: 10px; margin-bottom: 10px; padding: 8px 15px; font-size: 0.8em; flex-shrink: 0; }
-
-        /* Power-up Indicators */
         #powerup-indicators { position: absolute; top: 5px; left: 5px; z-index: 5; display: flex; gap: 4px; }
         .indicator { font-size: 1.3em; opacity: 0.5; text-shadow: 1px 1px 2px rgba(0,0,0,0.5); transition: opacity 0.3s ease; }
         .indicator.active { opacity: 1; animation: pulse 0.8s infinite; }
         #magnet-indicator.active { animation: pulse-magnet 0.6s infinite; }
         @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.1); } 100% { transform: scale(1); } }
         @keyframes pulse-magnet { 0% { transform: scale(1); text-shadow: 0 0 5px gold; } 50% { transform: scale(1.2); text-shadow: 0 0 15px gold; } 100% { transform: scale(1); text-shadow: 0 0 5px gold; } }
-
         /* --- Mobile Landscape Optimizations --- */
         @media (orientation: landscape) and (max-height: 600px), (orientation: landscape) and (max-width: 900px) {
             body { padding: 2px; justify-content: flex-start; /* Align content to top */ }
@@ -83,7 +66,6 @@
             }
              #mission-complete-popup { bottom: 30px; font-size: 0.6em; padding: 5px 10px; }
         }
-
         /* --- Mobile Portrait Optimizations --- */
         @media (orientation: portrait) and (max-width: 600px) {
             body { padding: 5px; }
@@ -94,17 +76,9 @@
             #controls { margin-bottom: 4px; gap: 6px; }
              button { padding: 6px 10px; font-size: 0.6em; }
              #install-button { padding: 6px 10px; font-size: 0.6em; margin-left: 10px;}
-
-            #game-container {
-                width: 95vw;
-                height: 50vh; /* Use significant vertical height */
-                max-width: 95vw;
-                aspect-ratio: unset; /* Override aspect ratio */
-                margin-bottom: 4px;
-            }
+            #game-container { width: 95vw; height: 60vh; max-width: 95vw; aspect-ratio: unset; margin-bottom: 4px; } /* Taller height */
              #mission-complete-popup { bottom: 40px; font-size: 0.7em; }
         }
-
     </style>
 </head>
 <body>
@@ -135,6 +109,13 @@
     </script>
 
     <script>
+        // --- All JavaScript code from v34c goes here ---
+        // (Including DOM Elements, Game Variables, Day/Night, Missions, Store Costs, Audio Setup,
+        // PWA Prompt, Touch Variables, Game Objects [Llama, Obstacle, Cloud, Coin],
+        // Utility Functions, Game Functions [setBackground, drawStars, resizeCanvas, etc.],
+        // Mission Functions, Game State Functions [gameOver, resetGame], gameLoop,
+        // Event Listeners, Initialization)
+        // ... (Paste the entire <script> content from the previous correct version here) ...
         // --- DOM Elements ---
         const canvas = document.getElementById('gameCanvas'); const ctx = canvas.getContext('2d'); const scoreDisplay = document.getElementById('score'); const coinsDisplay = document.getElementById('coins'); const highScoreDisplay = document.getElementById('high-score'); const messageBox = document.getElementById('message-box'); const startButton = document.getElementById('start-button'); const jumpButton = document.getElementById('jump-button'); const duckButton = document.getElementById('duck-button'); const storeButton = document.getElementById('store-button'); const closeStoreButton = document.getElementById('close-store'); const storeInterface = document.getElementById('store-interface'); const storeCoinBalance = document.getElementById('store-coin-balance'); const buyShieldButton = document.getElementById('buy-shield'); const buyLifeButton = document.getElementById('buy-life'); const buyMagnetButton = document.getElementById('buy-magnet'); const shieldOwnedDisplay = document.getElementById('shield-owned'); const lifeOwnedDisplay = document.getElementById('life-owned'); const magnetOwnedDisplay = document.getElementById('magnet-owned'); const shieldIndicator = document.getElementById('shield-indicator'); const magnetIndicator = document.getElementById('magnet-indicator'); const lifeIndicator = document.getElementById('life-indicator'); const gameContainer = document.getElementById('game-container'); const missionDisplay = document.getElementById('mission-display'); const missionCompletePopup = document.getElementById('mission-complete-popup');
         const installButton = document.getElementById('install-button');
@@ -180,13 +161,16 @@
         // --- PWA Install Prompt ---
         let deferredPrompt;
 
-        // --- Touch Swipe Variables ---
+        // --- Touch Swipe Variables (FIXED) ---
+        let touchStartX = 0;
         let touchStartY = 0;
+        let touchEndX = 0;
         let touchEndY = 0;
-        const minSwipeDistance = 40; // Pixels needed to count as a swipe
         let touchStartTime = 0;
-        const maxTapTime = 200; // ms to differentiate tap vs swipe start
-        let isPotentialSwipe = false; // Flag to track touch start
+        let isSwiping = false; // Tracks if a swipe gesture is currently happening
+        const minSwipeYDistance = 50; // Min Y distance for a vertical swipe
+        const maxSwipeXDistance = 50; // Max X distance allowed for a vertical swipe
+        const maxTapTime = 250; // Max duration for a tap
 
         // --- Game Objects ---
         const groundHeight = 50;
@@ -522,6 +506,7 @@
             if (!audioReady) {
                 // Wrap Tone.start() in a try...catch for robustness
                 try {
+                    // Use a user gesture context for Tone.start()
                     Tone.start().then(() => {
                         console.log("Audio context started.");
                         setupAudio();
@@ -545,7 +530,95 @@
         function startDuck(e){if(!isGameRunning)return; e.preventDefault();console.log("Duck button down");llama.duck(true);}
         function endDuck(e){if(!isGameRunning)return; e.preventDefault();console.log("Duck button up");llama.duck(false);}
 
-        gameContainer.addEventListener('touchstart', (e) => { console.log("Touch detected on gameContainer"); if (e.target !== canvas || messageBox.style.display === 'block') { return; } if (isGameOver && !startButton.disabled) { e.preventDefault(); handleGameStartInteraction(); return } if (isGameRunning) { e.preventDefault(); llama.jump(); } }, {passive:false});
+        // --- Touch Controls (Tap Jump / Swipe Duck - Restored & Refined) ---
+        gameContainer.addEventListener('touchstart', (e) => {
+            // console.log("Touch start");
+            if (e.target !== canvas || storeInterface.style.display === 'flex' || messageBox.style.display === 'block') {
+                // console.log("Touch ignored (not canvas or UI element visible)");
+                return;
+            }
+
+            if (isGameOver && !startButton.disabled) {
+                 console.log("Touch starting game");
+                 e.preventDefault(); // Prevent scroll/zoom on start
+                 handleGameStartInteraction();
+                 return
+            }
+            if (isGameRunning) {
+                // Record start position and time
+                touchStartX = e.changedTouches[0].screenX;
+                touchStartY = e.changedTouches[0].screenY;
+                touchStartTime = Date.now();
+                isSwiping = false; // Reset swipe flag for this touch sequence
+                // Don't prevent default here, do it in touchmove if needed
+            }
+        }, {passive: false}); // Need passive:false to potentially call preventDefault in move/end
+
+        gameContainer.addEventListener('touchmove', (e) => {
+            if (!isGameRunning || touchStartY === 0) return; // Only track if game running and touch started
+
+            const currentX = e.changedTouches[0].screenX;
+            const currentY = e.changedTouches[0].screenY;
+            let distY = currentY - touchStartY;
+            let distX = currentX - touchStartX;
+
+            // If significant movement (vertical or horizontal), assume swipe and prevent scrolling
+            if (Math.abs(distY) > 10 || Math.abs(distX) > 10) {
+                 e.preventDefault(); // Prevent scrolling ONLY if movement detected
+                 isSwiping = true; // Mark as swiping
+            }
+
+            // Check specifically for downward swipe during move
+            if (distY > minSwipeYDistance && Math.abs(distX) < maxSwipeXDistance) {
+                if (!llama.isDucking) { // Only trigger duck start once per swipe
+                    console.log("Swipe Down Move -> Duck Start");
+                    llama.duck(true); // Start ducking
+                }
+            }
+        }, {passive: false}); // Need passive:false for preventDefault
+
+        gameContainer.addEventListener('touchend', (e) => {
+            // console.log("Touch end");
+            if (!isGameRunning || touchStartY === 0) { // Only process if game running and touch started
+                 touchStartY = 0; // Reset just in case
+                 isSwiping = false;
+                 return;
+            }
+            // Don't prevent default here unless necessary
+
+            const touchEndTime = Date.now();
+            const touchDuration = touchEndTime - touchStartTime;
+            touchEndY = e.changedTouches[0].screenY; // Get final Y
+            touchEndX = e.changedTouches[0].screenX; // Get final X
+            let distY = touchEndY - touchStartY;
+            let distX = touchEndX - touchStartX;
+
+             // Check if it was likely a Tap (minimal movement, short duration)
+             // Make tap detection stricter: check if NOT swiping downwards primarily
+             if (!isSwiping && touchDuration < maxTapTime && Math.abs(distX) < maxSwipeXDistance && Math.abs(distY) < minSwipeYDistance ) {
+                console.log("Tap detected for Jump");
+                llama.jump();
+             }
+            // If ducking was started by a swipe, stop it on touchend
+            else if (llama.isDucking && isSwiping) {
+                 console.log("Swipe End detected, stopping duck.");
+                 llama.duck(false);
+            } else {
+                 console.log("Touch end - neither tap nor clear swipe down.");
+                 // If duck was triggered by button/key, this touchend shouldn't stop it.
+                 // If user swiped down and held, this touchend *should* stop it.
+                  if (llama.isDucking && isSwiping) { // Check again, stop duck if it resulted from this swipe
+                     llama.duck(false);
+                 }
+            }
+
+            // Reset tracking variables
+            isSwiping = false;
+            touchStartY = 0;
+            touchEndY = 0;
+            touchStartTime = 0;
+        });
+
 
         storeButton.addEventListener('click', ()=>{ playUIClick(); if(isGameRunning)return; storeInterface.style.display='flex';updateDisplays();});
         closeStoreButton.addEventListener('click', ()=>{ playUIClick(); storeInterface.style.display='none';});
@@ -583,5 +656,5 @@
          }
 
     </script>
-    </body>
+</body>
 </html>
